// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeadParagraph component Matches the snapshot 1`] = `
<DocumentFragment>
  <p
    class="ssb-lead-paragraph"
  >
    Leading paragraph
  </p>
</DocumentFragment>
`;

exports[`LeadParagraph component Toggles className correctly 1`] = `
<DocumentFragment>
  <p
    class="ssb-lead-paragraph negative"
  >
    Leading paragraph
  </p>
</DocumentFragment>
`;
